<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="hu.aut.android.todorecyclerviewdemo.ScrollingActivity">

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/review"
        android:title="@string/feedback"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/add_item"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_items"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/delete_items"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_items"
        android:visible="true"
        app:showAsAction="always" />
</menu>
