<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@drawable/background">


        <EditText
            android:id="@+id/name"
            android:layout_width="281dp"
            android:layout_height="42dp"
            android:layout_marginLeft="52dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/item_name"
            android:inputType="textPersonName"
             />

        <EditText
            android:id="@+id/price"
            android:layout_width="281dp"
            android:layout_height="42dp"
            android:layout_marginLeft="52dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/estimated_price"
            android:inputType="textPersonName|number" />

        <EditText
            android:id="@+id/descript"
            android:layout_width="276dp"
            android:layout_height="41dp"
            android:layout_marginLeft="52dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/item_description"
            android:inputType="textPersonName"
             />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="134dp"
            android:layout_height="29dp"
            android:layout_marginLeft="52dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="8dp"
            android:gravity="left|center"
            android:text="@string/item_type" />

        <Spinner
            android:id="@+id/myspinner"
            android:layout_width="285dp"
            android:layout_height="30dp"
            android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="235dp"
            android:layout_height="33dp"
            android:layout_marginLeft="52dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="8dp"
            android:text="@string/already_purchased" />

</LinearLayout>
